MBSA-852 Add retries for HTTP requests, clarify error messages