@@ -3,4 +3,6 @@
 set -ex
 
 adb start-server
-java -jar ./emcee-worker.jar start -c config.json -ll info
+
+# --add-opens solves the Retrofit and Java 11 issue. See https://github.com/square/retrofit/issues/3341
+java --add-opens=java.base/java.lang.invoke=ALL-UNNAMED -jar ./emcee-worker.jar start -c config.json -ll info
